* Version 1.0.7

  Resque instrumentation now supports the resque-multi-job-forks plugin

* Version 1.0.6

  Update newrelic dependency: depends on 2.11.1

* Version 1.0.5

  Clear stats in forked resque jobs

* Version 1.0.4

  Resque support

* Version 1.0.3

  MongoDB instrumentation contributed by John Nunemaker

* Version 1.0.2
 
  Improved Camping support

* Version 1.0.1

  Removed DelayedJob, put back in core agent

* Version 1.0.0

  Initial Release:
  - Camping
  - Authlogic
  - DelayedJob
  - Paperclip